Actualiza el título y la descripción del Lab 3 a "RTOS Snake Game Part 1", enfocándose en el uso de tareas, temporizadores y comunicación entre tareas con FreeRTOS.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -50,12 +50,12 @@ import freertos from '../../assets/freertos.png';
     description="Implement a real-time stopwatch using FreeRTOS tasks and queues."
     href="/labs/lab2/"
   />
-    {false && (
+
   <LinkCard
-    title="Lab 4 – RTOS Snake Game"
-    description="Create a multitasking Snake game with FreeRTOS timers, mutexes, and LCD rendering."
-    href="/labs/lab4/"
-  />)}
+    title="Lab 3 – RTOS Snake Game Part 1"
+    description="Create a simple Snake game using FreeRTOS tasks, timers, and inter-task communication and Mutexes."
+    href="/labs/lab3/"
+  />
     {false && (
   <LinkCard
     title="Lab 5 – Final System Integration"
