--- a/src/content/docs/labs/lab3.mdx
+++ b/src/content/docs/labs/lab3.mdx
@@ -25,6 +25,12 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
       icon="setting"
    />
    <LinkCard
+       title="Download Lab 3 Starter Code"
+       description="Just the suggested files not the project."
+       href="/assets/lab_files/Lab_3.zip"
+       icon="right-arrow"
+    />
+   <LinkCard
       title="Back to Lab Summary"
       description="Return to the list of all labs."
       href="/guides/labtimeline/"
